Cancelling timer only when not NULL

--- a/appinfo.json
+++ b/appinfo.json
@@ -8,6 +8,7 @@
     ],
     "companyName": "fritschy.de",
     "longName": "fillttmm-clone",
+    "projectType": "native",
     "resources": {
         "media": []
     },
